updated index and styles

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
    <!------------------- ABOUT JOVIAN ------------------------------->
 
-   <h1>Welcome to Jovian</h1>
+   <h1>About Jovian</h1>
 
    <div id="about">
       <div id="description">
