added title and favicon

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-   <title>My First Web Page</title>
+   <title>Jovian Careers</title>
+   <link rel="icon" href="./img/jovian_favicon.png" type="image/x-icon">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link
