--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
 
 <head>
+   <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="description" content="Learn about job openings at Jovian and submit your application now">
+   <meta name="keywords" content="data science, software development, jobs">
+   <meta name="author" content="Jovian">
+   <meta name="robots" content="index, follow">
+   <meta property="og:title" content="Jovian Careers">
+   <meta property="og:description" content="Learn about job openings at Jovian and submit your application now">
+   <meta property="og:image" content="./img/preview.png">
+   <meta name="twitter:title" content="Jovian Careers">
+   <meta name="twitter:description" content="Learn about job openings at Jovian and submit your application now">
    <title>Jovian Careers</title>
    <link rel="icon" href="./img/jovian_favicon.png" type="image/x-icon">
    <link rel="preconnect" href="https://fonts.googleapis.com">
