--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,12 @@
    <meta name="keywords" content="data science, software development, jobs">
    <meta name="author" content="Jovian">
    <meta name="robots" content="index, follow">
-   <meta property="og:title" content="Jovian Careers">
+   <meta property="og:title" content="Jovian Careers | Build a successful Career in Tech">
    <meta property="og:description" content="Learn about job openings at Jovian and submit your application now">
    <meta property="og:image" content="./img/preview.png">
-   <meta name="twitter:title" content="Jovian Careers">
+   <meta name="twitter:title" content="Jovian Careers | Build a successful Career in Tech">
    <meta name="twitter:description" content="Learn about job openings at Jovian and submit your application now">
-   <title>Jovian Careers</title>
+   <title>Jovian Careers | Build a successful Career in Tech</title>
    <link rel="icon" href="./img/jovian_favicon.png" type="image/x-icon">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
