Update heading in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
 
    <!------------------- ABOUT JOVIAN ------------------------------->
 
-   <h1>About Jovian</h1>
+   <h1>Welcome to Jovian</h1>
 
    <div id="about">
       <div id="description">
