--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,12 @@
    <meta name="keywords" content="data science, software development, jobs">
    <meta name="author" content="Jovian">
    <meta name="robots" content="index, follow">
-   <meta property="og:title" content="Jovian Careers | Build a successful Career in Tech">
+   <meta property="og:title" content="Jovian Careers V2">
    <meta property="og:description" content="Learn about job openings at Jovian and submit your application now">
    <meta property="og:image" content="./img/preview.png">
-   <meta name="twitter:title" content="Jovian Careers | Build a successful Career in Tech">
+   <meta name="twitter:title" content="Jovian Careers V2">
    <meta name="twitter:description" content="Learn about job openings at Jovian and submit your application now">
-   <title>Jovian Careers | Build a successful Career in Tech</title>
+   <title>Jovian Careers V2</title>
    <link rel="icon" href="./img/jovian_favicon.png" type="image/x-icon">
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,7 @@
 
    <!------------------- ABOUT JOVIAN ------------------------------->
 
-   <h1>Welcome to Jovian</h1>
+   <h1>About Jovian</h1>
 
    <div id="about">
       <div id="description">
