Added responsive layout

--- a/src/index.html
+++ b/src/index.html
@@ -25,10 +25,11 @@
 
 <body>
    <div id="navbar">
-      <img id="logo" src="./img/logo.png" alt="Jovian Logo">
+      <img id="logo" src="https://imgur.com/JRA5Q8a.png" alt="Jovian Logo">
+      <img id="logo-with-text" src="./img/logo.png" alt="Jovian Logo with Text">
    </div>
 
-   <img id="banner" src="./img/banner.jpg" alt="Banner" height="360">
+   <img id="banner" src="./img/banner.jpg" alt="Banner">
 
    <!------------------- ABOUT JOVIAN ------------------------------->
 
@@ -37,7 +38,8 @@
    <div id="about">
       <div id="description">
          <p style="margin: 0;">
-            At Jovia, we're on a top secret mission to build the world's most highly reputed technical university, and we're
+            At Jovia, we're on a top secret mission to build the world's most highly reputed technical university, and
+            we're
             building it
             completely onine. We offer several beginner friendly courses that are taken by 300,000+ registered users.
          </p>
@@ -66,6 +68,33 @@
    <h2>Job Opportunities</h2>
 
    <div id="jobs">
+      <div id="jobs-list">
+         <div class="job">
+            <div class="job-title">Frontend Developer</div>
+            <div class="job-detail">Bengaluru, India</div>
+            <div class="job-detail">₹12,00,000</div>
+            <div class="job-detail">Posted Mar 3, 2023</div>
+         </div>
+         <div class="job">
+            <div class="job-title">Full Stack Developer</div>
+            <div class="job-detail">New Delhi, India</div>
+            <div class="job-detail">₹15,00,000</div>
+            <div class="job-detail">Posted Feb 1, 2023</div>
+         </div>
+         <div class="job">
+            <div class="job-title">Data Scientist</div>
+            <div class="job-detail">San Francisco</div>
+            <div class="job-detail">$175,000</div>
+            <div class="job-detail">Posted Dec 22, 2022</div>
+         </div>
+         <div class="job">
+            <div class="job-title">ML Engineer</div>
+            <div class="job-detail">Remote</div>
+            <div class="job-detail">$80,000</div>
+            <div class="job-detail">Posted Sep 19, 2022</div>
+         </div>
+      </div>
+
       <table id="jobs-table">
          <tr class="jobs-header-row">
             <th rowspan="2">Job Title</th>
@@ -148,7 +177,8 @@
 
          <div class="form-group">
             <label for="coverletter">Cover Letter</label><br>
-            <textarea name="coverletter" id="coverletter" rows="5" placeholder="Explain what makes you suitable for the job.."></textarea>
+            <textarea name="coverletter" id="coverletter" rows="5"
+               placeholder="Explain what makes you suitable for the job.."></textarea>
          </div>
 
          <div class="form-group">
